Hide overflow-x to prevent horizontal scrollbar appearing during transitions

--- a/src/templates/blogpost.module.css
+++ b/src/templates/blogpost.module.css
@@ -3,6 +3,10 @@
   justify-content: center;
 }
 
+.container {
+  overflow-x: hidden;
+}
+
 .content {
   margin: 3rem 0.5rem;
 }
